--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -31,8 +31,18 @@
         {% else %}
           <a href="{% url "login" %}">Log-in</a>
         {% endif %}
-      </span>
+      </span>    
     </div>
+    {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+          <li class="{{ message.tags }}">
+            {{ message|safe }}
+              <a href="#" class="close">x</a>
+          </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
     <div id="content">
         {% block content %}
         {% endblock %}
