--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -24,6 +24,8 @@
     </div>
     <div class="social">
     <ul>
+        <li class="google">
+            <a href="{% url "social:begin" "google-oauth2" %}">Login with Google</a></li>
         <li class="facebook">
         <a href="{% url "social:begin" "facebook" %}">Sign in with
        Facebook</a>
