--- a/bookmarks/images/templates/base.html
+++ b/bookmarks/images/templates/base.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     {% block content %}{% endblock %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    $(document).ready(function(){
+      {% block domready %}
+      {% endblock %}
+    });
 </body>
 </html>
