--- a/bookmarks/account/templates/account/user/detail.html
+++ b/bookmarks/account/templates/account/user/detail.html
@@ -26,3 +26,33 @@
         </div>
     {% endwith %}
 {% endblock %}
+{% block domready %}
+$('a.follow').click(function(e){
+    e.preventDefault()
+    $.post('{% url "user_follow" %}',
+    {
+        id: $(this).data('id'),
+        action : $(this).data('action')
+    },
+    function(data){
+        if(data['status']='ok'){
+        var previous_action = $('a.follow').data('action');
+        toggle_action(previous_action);
+        toggle_link_text(previous_action);
+        change_followers_count(previous_action);
+        }
+    });
+});
+function toggle_action(previous_action){
+    $('a.follow').data('action',previous_action == 'follow' ? 'unfollow' : 'follow');
+}
+
+function toggle_link_text(previous_action){
+    $('a.follow').text(previous_action == 'follow' ? 'unfollow' : 'follow');
+}
+
+function change_followers_count(previous_action){
+    var previous_followers = parseInt($('span.count .total').text());
+    $('span.count .total').text(previous_action == 'follow' ? previous_followers + 1 : previous_followers - 1);
+}
+{% endblock %}
