--- a/bookmarks/images/templates/images/image/detail.html
+++ b/bookmarks/images/templates/images/image/detail.html
@@ -48,20 +48,23 @@
         if (data['status'] == 'ok')
         {
           var previous_action = $('a.like').data('action');
-
-          // toggle data-action
-          $('a.like').data('action', previous_action == 'like' ?
-          'unlike' : 'like');
-          // toggle link text
-          $('a.like').text(previous_action == 'like' ? 'Unlike' :
-          'Like');
-
-          // update total likes
-          var previous_likes = parseInt($('span.count .total').text());
-          $('span.count .total').text(previous_action == 'like' ?
-          previous_likes + 1 : previous_likes - 1);
+          toggle_link_action(previous_action)
+          toggle_link_text(previous_action)
+          update_total_likes(previous_action);
         }
       }
     );
   });
+function update_total_likes(previous_action){
+    var previous_likes = parseInt($('span.count .total').text());
+    $('span.count .total').text(previous_action == 'like' ? previous_likes + 1 : previous_likes - 1);
+}
+
+function toggle_link_action(previous_action){
+    $('a.like').data('action', previous_action == 'like' ? 'unlike' : 'like');
+}
+
+function toggle_link_text(previous_action){
+    $('a.like').text(previous_action == 'like' ? 'Unlike' : 'Like');
+}
 {% endblock %}
