--- a/bookmarks/images/templates/images/image/list.html
+++ b/bookmarks/images/templates/images/image/list.html
@@ -11,24 +11,27 @@
 
 {% block domready %}
   var page = 1;
-  var empty_page = false;
+  var is_last_page = false;
   var block_request = false;
 
   $(window).scroll(function() {
     var margin = $(document).height() - $(window).height() - 200;
-    if  ($(window).scrollTop() > margin && empty_page == false &&
+    if  ($(window).scrollTop() > margin && is_last_page == false &&
     block_request == false) {
      block_request = true;
       page += 1;
-      $.get('?page=' + page, function(data) {
-       if(data == '') {
-          empty_page = true;
-        }
-        else {
-          block_request = false;
-          $('#image-list').append(data);
-        }
-      });
+      append_image(page,is_last_page,block_request)
     }
   });
+  function append_image(page,is_last_page,block_request){
+    $.get('?page=' + page, function(data) {
+      if(data == '') {
+         is_last_page = true;
+       }
+       else {
+         block_request = false;
+         $('#image-list').append(data);
+       }
+     });
+  }
 {% endblock %}
