--- a/bookmarks/account/templates/account/user/detail.html
+++ b/bookmarks/account/templates/account/user/detail.html
@@ -36,22 +36,17 @@ $('a.follow').click(function(e){
     },
     function(data){
         if(data['status']='ok'){
-        var previous_action = $('a.follow').data('action');
-        toggle_action(previous_action);
-        toggle_link_text(previous_action);
-        change_followers_count(previous_action);
+            update_template();
         }
     });
 });
-function toggle_action(previous_action){
+function update_template(){
+    var previous_action = $('a.follow').data('action');
     $('a.follow').data('action',previous_action == 'follow' ? 'unfollow' : 'follow');
-}
-
-function toggle_link_text(previous_action){
     $('a.follow').text(previous_action == 'follow' ? 'unfollow' : 'follow');
+    update_followers_count(previous_action);
 }
-
-function change_followers_count(previous_action){
+function update_followers_count(previous_action){
     var previous_followers = parseInt($('span.count .total').text());
     $('span.count .total').text(previous_action == 'follow' ? previous_followers + 1 : previous_followers - 1);
 }
